src/objects/Pipeline_Status_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Setting for pipeline status setting emails: Lead and Opportunity</description>
    <fields>
        <fullName>LEAD_EARLY_STAGE_EMAILS_ENABLED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to enable Lead early stage emails.</description>
        <inlineHelpText>Flag to enable Lead early stage emails.</inlineHelpText>
        <label>LEAD_EARLY_STAGE_EMAILS_ENABLED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEAD_LATE_STAGE_EMAILS_ENABLED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEAD_LATE_STAGE_EMAILS_ENABLED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEAD_MEDIUM_STAGE_EMAILS_ENABLED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEAD_MEDIUM_STAGE_EMAILS_ENABLED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPPORTUNITY_EARLY_STAGE_EMAILS_ENABLED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPPORTUNITY_EARLY_STAGE_EMAILS_ENABLED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPPORTUNITY_LATE_STAGE_EMAILS_ENABLED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPPORTUNITY_LATE_STAGE_EMAILS_ENABLED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPPORTUNITY_MEDIUM_STAGE_EMAILS_ENABLED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPPORTUNITY_MEDIUM_STAGE_EMAILS_ENABLED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEST_MODE_ENABLED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TEST_MODE_ENABLED</label>
        <type>Checkbox</type>
    </fields>
    <label>Pipeline Status Settings</label>
</CustomObject>